--- a/MovieReservation.APi/MovieReservation.APi.csproj
+++ b/MovieReservation.APi/MovieReservation.APi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MovieReservation.Infrastructure\MovieReservation.Infrastructure.csproj" />
+    <ProjectReference Include="..\MovieReservation.Service\MovieReservation.Service.csproj" />
     <ProjectReference Include="..\MovieReservation.Sol.ServiceDefaults\MovieReservation.Sol.ServiceDefaults.csproj" />
   </ItemGroup>
 
