--- a/MovieReservation.Service/MovieReservation.Service.csproj
+++ b/MovieReservation.Service/MovieReservation.Service.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.14.1" />
+    <PackageReference Include="MimeKit" Version="4.14.0" />
+    <PackageReference Include="Stripe.net" Version="50.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MovieReservation.Infrastructure\MovieReservation.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
