--- a/MovieReservation.Service/MovieReservation.Service.csproj
+++ b/MovieReservation.Service/MovieReservation.Service.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.14.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.1" />
     <PackageReference Include="MimeKit" Version="4.14.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
     <PackageReference Include="Stripe.net" Version="50.1.0" />
   </ItemGroup>
 
