--- a/MovieReservation.Sol.AppHost/MovieReservation.Sol.AppHost.csproj
+++ b/MovieReservation.Sol.AppHost/MovieReservation.Sol.AppHost.csproj
@@ -11,7 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="13.1.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="13.1.0" />
+    <PackageReference Include="Aspire.StackExchange.Redis" Version="13.1.0" />
   </ItemGroup>
 
   <ItemGroup>
