--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -34,5 +34,9 @@
   "ResponseCompression": {
     "EnableForHttps": true,
     "CompressionLevel": "Fastest"
+  },
+  "Redis": {
+    "Enabled": true,
+    "Connection": "localhost:6379,abortConnect=false,connectTimeout=30000,defaultDatabase=0"
   }
 }
