--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -121,6 +121,10 @@ jobs:
     name: 🔒 Security Scan
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name == 'push'
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: 📥 Checkout code
@@ -135,7 +139,7 @@ jobs:
           output: 'trivy-results.sarif'
 
       - name: 📤 Upload Trivy results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
@@ -145,6 +149,7 @@ jobs:
     name: 📋 Code Quality
     runs-on: ubuntu-latest
     needs: build
+    if: ${{ github.event_name == 'push' && secrets.SONAR_TOKEN != '' }}
 
     steps:
       - name: 📥 Checkout code
@@ -170,16 +175,19 @@ jobs:
         run: dotnet restore
 
       - name: 🔍 SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+        uses: SonarSource/sonarqube-scan-action@v5
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=muhaammedalaa_MovieReservation
+            -Dsonar.organization=muhaammedalaa
 
   # ===== DEPLOY TO STAGING =====
   deploy-staging:
     name: 🌐 Deploy to Staging
     runs-on: ubuntu-latest
-    needs: [build, docker-build, security, code-quality]
+    needs: [build, docker-build, security]
     if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
     environment:
       name: Staging
@@ -218,7 +226,7 @@ jobs:
   deploy-production:
     name: 🚀 Deploy to Production
     runs-on: ubuntu-latest
-    needs: [build, docker-build, security, code-quality]
+    needs: [build, docker-build, security]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment:
       name: Production
