--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -121,10 +121,6 @@ jobs:
     name: 🔒 Security Scan
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'push'
-    permissions:
-      contents: read
-      security-events: write
 
     steps:
       - name: 📥 Checkout code
@@ -139,7 +135,7 @@ jobs:
           output: 'trivy-results.sarif'
 
       - name: 📤 Upload Trivy results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v2
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
@@ -149,7 +145,6 @@ jobs:
     name: 📋 Code Quality
     runs-on: ubuntu-latest
     needs: build
-    if: ${{ github.event_name == 'push' && secrets.SONAR_TOKEN != '' }}
 
     steps:
       - name: 📥 Checkout code
@@ -175,19 +170,16 @@ jobs:
         run: dotnet restore
 
       - name: 🔍 SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v5
+        uses: SonarSource/sonarcloud-github-action@master
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=muhaammedalaa_MovieReservation
-            -Dsonar.organization=muhaammedalaa
 
   # ===== DEPLOY TO STAGING =====
   deploy-staging:
     name: 🌐 Deploy to Staging
     runs-on: ubuntu-latest
-    needs: [build, docker-build, security]
+    needs: [build, docker-build, security, code-quality]
     if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
     environment:
       name: Staging
@@ -226,7 +218,7 @@ jobs:
   deploy-production:
     name: 🚀 Deploy to Production
     runs-on: ubuntu-latest
-    needs: [build, docker-build, security]
+    needs: [build, docker-build, security, code-quality]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment:
       name: Production
