--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -115,12 +115,16 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
+ 
   # ===== SECURITY SCAN JOB =====
   security:
     name: 🔒 Security Scan
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name == 'push'
+    permissions:
+       contents: read
+       security-events: write
 
     steps:
       - name: 📥 Checkout code
@@ -135,7 +139,7 @@ jobs:
           output: 'trivy-results.sarif'
 
       - name: 📤 Upload Trivy results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
@@ -145,6 +149,7 @@ jobs:
     name: 📋 Code Quality
     runs-on: ubuntu-latest
     needs: build
+    if: ${{ secrets.SONAR_TOKEN != '' }}
 
     steps:
       - name: 📥 Checkout code
